--- a/index.html
+++ b/index.html
@@ -387,11 +387,10 @@ summary {
 
 <div id="TOC">
 <ul>
-<li><a href="#about-the-project">About the project</a><ul>
 <li><a href="#mooc-introduction-to-open-data-science-2019-homework1">MOOC Introduction to Open Data Science 2019: Homework1</a></li>
-</ul></li>
-<li><a href="#mooc-introduction-to-open-data-science-2019-homework2">MOOC Introduction to Open Data Science 2019: Homework2</a></li>
+<li><a href="#mooc-introduction-to-open-data-science-2019-homework2">MOOC Introduction to Open Data Science 2019: Homework2</a><ul>
 <li><a href="#regression-and-model-validation">Regression and model validation</a></li>
+</ul></li>
 <li><a href="#mooc-introduction-to-open-data-science-2019-homework3">MOOC Introduction to Open Data Science 2019: Homework3</a><ul>
 <li><a href="#step1.-check-the-data">Step1. Check the data</a></li>
 </ul></li>
@@ -399,11 +398,8 @@ summary {
 </div>
 
 <hr />
-<div id="about-the-project" class="section level1">
-<h1>About the project</h1>
-<p><em>Write a short description about the course and add a link to your GitHub repository here. This is an R Markdown (.Rmd) file so you can use R Markdown syntax.</em></p>
-<div id="mooc-introduction-to-open-data-science-2019-homework1" class="section level2">
-<h2>MOOC Introduction to Open Data Science 2019: Homework1</h2>
+<div id="mooc-introduction-to-open-data-science-2019-homework1" class="section level1">
+<h1>MOOC Introduction to Open Data Science 2019: Homework1</h1>
 <blockquote>
 <p>The purpose of learning this course is that I would like to learn data analysis skill for the future career. Plus, this online course looks <strong>awesome</strong>!</p>
 </blockquote>
@@ -412,12 +408,10 @@ summary {
 <hr />
 </div>
 </div>
-</div>
 <div id="mooc-introduction-to-open-data-science-2019-homework2" class="section level1">
 <h1>MOOC Introduction to Open Data Science 2019: Homework2</h1>
-</div>
-<div id="regression-and-model-validation" class="section level1">
-<h1>Regression and model validation</h1>
+<div id="regression-and-model-validation" class="section level2">
+<h2>Regression and model validation</h2>
 <p><em>Describe the work you have done this week and summarize your learning.</em></p>
 <ul>
 <li>Describe your work and results clearly.</li>
@@ -519,6 +513,7 @@ summary {
 </ol>
 </blockquote>
 <hr />
+</div>
 </div>
 </div>
 </div>
